--- a/foundations/04-chaining-selectors/solution/solution.html
+++ b/foundations/04-chaining-selectors/solution/solution.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="solution.css">
   </head>
   <body>
+    <!-- Use the classes BELOW this line -->
     <div>
       <img class="avatar proportioned" src="../pexels-katho-mutodo-8434791.jpg" alt="Woman with glasses">
       <img class="avatar distorted" src="../pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised expression">
     </div>
+    <!-- Use the classes ABOVE this line -->
     <div>
       <img class="original proportioned" src="../pexels-katho-mutodo-8434791.jpg" alt="Woman with glasses">
       <img class="original distorted" src="../pexels-andrea-piacquadio-3777931.jpg" alt="Man with surprised expression">
